2002-09-18  Vivien Malerba <malerba@gnome-db.org>
	* libgda/gda-value.[ch]: changed the _xml functions to work
	with xmlNodePtr instead of gchar *
	* providers/postgres/gda-postgres-provider.c: bug fix for NULL
	default value for a field

2002-09-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* report/libgda-report/gda-report-document.[ch]: fixed public
	functions' names.

2002-09-15  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.c: fixed compile error

2002-09-15  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-init.c:
	(gda_main_run): use g_main_loop_run.

	* libgda/gda-value.c: 
	(gda_value_new_from_xml): avoid compiler warning.

2002-09-14  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.c: coding style corrections,
	implemented change_database
	
	* providers/freetds/gda-freetds-provider.h: added database to freetds
	connection handle
	
	* providers/freetds/gda-tds-schemas.h:
	corrected databases schema

2002-09-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mysql/gda-mysql-provider.c (add_aggregate_row): add
	missing information to the returned data model (although still with
	some undefined values).
	(get_mysql_aggregates): adapted to changes in add_aggregate_row().

	* doc/C/libgda-docs.sgml: added information about the DATABASES schema

2002-09-11  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-value.[ch] (gda_value_new_from_xml): new function.
	(gda_value_to_xml): new function.

2002-09-11  Carlos Perello Marin <carlos@gnome-db.org>

	* configure.in (ALL_LINGUAS): Added ko

2002-09-11  Xabier Rodriguez Calvar <xrcalvar@igalia.com>

	* doc/C/libgda-docs.sgml: small change in compilation instructions.

2002-09-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.8.193

2002-09-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/libgda-docs.sgml: extended compilation section.

2002-09-05  Rodrigo Moya <rodrigo@gnome-db.org>
