@@ -1,3 +1,7 @@
+2002-09-22  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
+
+	* libgda/gda-config.c: fixed a couple of leaks.
+
 2002-09-18  Vivien Malerba <malerba@gnome-db.org>
 	* libgda/gda-value.[ch]: changed the _xml functions to work
 	with xmlNodePtr instead of gchar *
